# kiibohd-core

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  test.kll
.cargo/: config
.github/workflows/: rust.yml
is31fl3743b/: Cargo.toml
is31fl3743b/src/: lib.rs
kiibohd-core-ffi/: Cargo.toml  README.md  cbindgen.toml
kiibohd-core-ffi/src/: hidio.rs  keyscanning.rs  lib.rs
kiibohd-hall-effect/: Cargo.toml  README.md
kiibohd-hall-effect-keyscanning/: Cargo.toml  README.md
kiibohd-hall-effect-keyscanning/src/: lib.rs
kiibohd-hall-effect/src/: lib.rs  rawlookup.rs  test.rs
kiibohd-hid-io/: Cargo.toml  README.md
kiibohd-hid-io-ffi/: Cargo.toml  README.md
kiibohd-hid-io-ffi/src/: lib.rs
kiibohd-hid-io/src/: lib.rs
kiibohd-keyscanning/: Cargo.toml  README.md
kiibohd-keyscanning/src/: lib.rs  state.rs
kiibohd-log/: Cargo.toml  README.md
kiibohd-log/src/: lib.rs
kiibohd-usb/: Cargo.toml  README.md
kiibohd-usb/src/: descriptor.rs  lib.rs  test.rs
kll-compiler/: Cargo.toml  README.md  test.kll
kll-compiler/examples/: assignment.kll  capabilitiesExample.kll  defaultMapExample.kll  example2.kll  keystone_scancode_map.kll  kllcoretest.kll  leds.kll  leds2.kll  mapping.kll  md1Map.kll  nonetest.kll  simple1.kll  simple2.kll  state_scheduling.kll  triggers.kll
kll-compiler/src/: kll.pest  lib.rs  main.rs  parser.rs  test.rs  types.rs
kll-compiler/src/emitters/: kiibohd.rs  kiibohd_keymap_template.h  mod.rs  test_data.rs
kll-compiler/src/emitters/kiibohd/: mod.rs
kll-compiler/src/emitters/kiibohdcore/: mod.rs
kll-compiler/src/emitters/kllcore/: mod.rs  test.rs
kll-compiler/src/emitters/rust/: mod.rs
kll-core/: Cargo.toml  README.md
kll-core/src/: lib.rs  macros.rs
kll-core/src/converters/: animation.rs  layer.rs  led.rs  mod.rs  rotation.rs  switch.rs
kll-core/src/layout/: mod.rs  test.rs
kll-core/src/pixelmap/: mod.rs
kll-hid/: Cargo.toml  README.md
kll-hid/src/: lib.rs
kll-macros/: Cargo.toml  README.md
kll-macros/src/: lib.rs
src/: he.rs  hidio.rs  lib.rs  main.rs
