[package]
name          = "kiibohd-core"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>", "Zion Koyl <hiszd1@gmail.com>"]
license       = "MIT OR Apache-2.0"
edition       = "2018"


[lib]
name = "kiibohd_core"


[features]
default = [
  "kiibohd-hall-effect",
  "kiibohd-hid-io",
  "kiibohd-keyscanning",
]

# The std option is used for cargo test only
std = []

# Used when compiling as a static library
lib = []


[workspace]
members = [
  "kiibohd-hall-effect",
  "kiibohd-hid-io",
  "kiibohd-keyscanning",
  "kiibohd-log",
  "kiibohd-usb",
]


[dependencies]
c_utf8              = { version = "^0.1", default-features = false }
cstr_core           = { version = "^0.2", default-features = false }
heapless            = { version = "^0.7" }
kiibohd-hid-io      = { path = "kiibohd-hid-io", optional = true }
kiibohd-hall-effect = { path = "kiibohd-hall-effect", optional = true }
kiibohd-keyscanning = { path = "kiibohd-keyscanning", optional = true }
kiibohd-log         = { path = "kiibohd-log", optional = true }
kiibohd-usb         = { path = "kiibohd-usb", optional = true }
pkg-version         = { version = "^1.0" }
