[workspace]
members = [
  "kiibohd-hall-effect",
  "kiibohd-hall-effect-keyscanning",
  "kiibohd-hid-io",
  "kiibohd-keyscanning",
  "kiibohd-usb",
  "kll-core",
  "kll-hid",
  "kll-macros",
]
# -ffi crates need to be compiled for a target which seems to cause issues for cargo feature unification
exclude = [
  "kiibohd-core-ffi",
  "kiibohd-hid-io-ffi",
]
