[workspace]
members = [
  "is31fl3743b",
  "kiibohd-hall-effect",
  "kiibohd-hall-effect-keyscanning",
  "kiibohd-hid-io",
  "kiibohd-keyscanning",
  "kiibohd-usb",
  "kll-core",
  "kll-hid",
  "kll-macros",
]
# kll-compiler needs to be excluded due to it's serde usage
# (will be moved back once hid-io-protocol moves from bincode-core to bincode)
# -ffi crates need to be compiled for a target which seems to cause issues for cargo feature unification
exclude = [
  "kll-compiler",
  "kiibohd-core-ffi",
  "kiibohd-hid-io-ffi",
]
