[package]
name = "is31fl3743b"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = [
  "heapless/x86-sync-pool", # TODO REMOVEME
]

[dependencies]
defmt = "0.3"
embedded-hal = "0.2.6"
heapless = "0.7"

[dev-dependencies]
