[package]
name = "is31fl3743b"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Bare-metal no_std driver for the Lumissil IS31FL3743B"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "embedded", "hardware-support"]
categories = ["embedded", "no-std"]

[features]
default = [
  "heapless/x86-sync-pool", # TODO REMOVEME
]

[dependencies]
defmt = "0.3"
embedded-hal = "0.2.7"
heapless = "^0.7.10"

[dev-dependencies]
