[package]
name          = "kiibohd-core-ffi"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>", "Zion Koyl <hiszd1@gmail.com>"]
license       = "MIT OR Apache-2.0"
edition       = "2021"
description   = "FFI package for kiibohd-core"
repository    = "https://github.com/kiibohd/kiibohd-core"
keywords      = ["no-std", "usb", "hid", "embedded", "keyboard"]
categories    = ["embedded", "no-std"]


[lib]
name = "kiibohd_core"


[features]
default = [
  "kiibohd-hall-effect",
  "kiibohd-hid-io-ffi",
  "kiibohd-keyscanning",
]

# The std option is used for cargo test only
std = []

# Used when compiling as a static library
lib = []
capi = []


[dependencies]
c_utf8              = { version = "^0.1", default-features = false }
heapless            = { version = "^0.7" }
kiibohd-hid-io-ffi  = { version = "0.1.0", path = "../kiibohd-hid-io-ffi", optional = true }
kiibohd-hall-effect = { version = "0.1.0", path = "../kiibohd-hall-effect", optional = true }
kiibohd-keyscanning = { version = "0.1.0", path = "../kiibohd-keyscanning", optional = true }
kiibohd-usb         = { version = "0.1.0", path = "../kiibohd-usb", optional = true }
pkg-version         = { version = "^1.0" }
