[package]
name          = "kiibohd-hall-effect"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
edition       = "2018"


[lib]
name = "kiibohd_hall_effect"


[features]
default = []

# Defmt logging disabled by default
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


[dependencies]
defmt    = { version = "0.2" }
heapless = { version = "^0.7" }
log      = { version = "^0.4", default-features = false }
typenum  = { version = "^1.12", features = ["no_std"] }


[dev-dependencies]
flexi_logger    = "^0.16"
