[package]
name          = "kiibohd-hall-effect"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
edition       = "2021"
repository    = "https://github.com/kiibohd/kiibohd-core"
description   = "Analysis crate for intepreting hall-effect keyboard switches (e.g. Silo Switches)"
keywords      = ["no-std", "usb", "hid", "embedded", "keyboard"]
categories    = ["embedded", "no-std", "hardware-support"]


[lib]
name = "kiibohd_hall_effect"


[features]
default = ["std"]

std = ["log"]

# Defmt logging disabled by default
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []


[dependencies]
defmt    = { version = "0.3" }
heapless = { version = "^0.7.10" }
log      = { version = "^0.4", default-features = false, optional = true }
typenum  = { version = "^1.12", features = ["no_std"] }


[dev-dependencies]
flexi_logger    = "^0.16"
