[package]
name          = "kiibohd-hid-io-ffi"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/kiibohd/kiibohd-core"
categories    = ["no-std", "embedded"]
description   = """
FFI HID-IO protocol implementation for the C kiibohd firmware.
Device Cortex-M implementation
"""
keywords = ["no-std", "usb", "hid", "embedded", "keyboard"]
categories = ["embedded", "no-std"]

edition = "2021"

[dependencies]
c_utf8          = { version = "^0.1", default-features = false }
cstr_core       = { version = "0.2", default-features = false }
heapless        = { version = "^0.7.10" }
hid-io-protocol = { version = "0.1.0", git = "https://github.com/hid-io/hid-io-core", default-features = false, features = ["device"] }
pkg-version     = { version = "^1.0" }
