[package]
name          = "kiibohd-hid-io"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
description   = """
HID-IO protocol implementation for the C kiibohd firmware.
Device Cortex-M implementation.
"""

edition = "2018"

[dependencies]
c_utf8          = { version = "^0.1", default-features = false }
cstr_core       = { version = "^0.2", default-features = false }
heapless        = { version = "^0.7" }
hid-io-protocol = { git = "https://github.com/hid-io/hid-io-core", default-features = false, features = ["device"] }
pkg-version     = { version = "^1.0" }
