[package]
name          = "kiibohd-hid-io"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
description   = """
HID-IO protocol implementation for the C kiibohd firmware.
"""

edition = "2021"

[dependencies]
heapless        = { version = "^0.7" }
hid-io-protocol = { git = "https://github.com/hid-io/hid-io-core", default-features = false, features = ["device", "defmt-impl"] }
pkg-version     = { version = "^1.0" }
