[package]
name          = "kiibohd-hid-io"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/kiibohd/kiibohd-core"
categories    = ["embedded", "no-std"]
description   = """
HID-IO protocol implementation for the C kiibohd firmware.
"""
keywords = ["no-std", "usb", "hid", "embedded", "keyboard"]
categories = ["embedded", "no-std"]

edition = "2021"

[dependencies]
heapless        = { version = "^0.7.10" }
hid-io-protocol = { version = "0.1.0", git = "https://github.com/hid-io/hid-io-core", default-features = false, features = ["device", "defmt-impl"] }
kll-core        = { version = "0.1.0", path = "../kll-core" }
pkg-version     = { version = "^1.0" }
