[package]
name = "kiibohd-keyscanning"
version = "0.1.0"
authors = ["Zion Koyl <hiszd1@gmail.com>", "Jacob Alexander <haata@kiibohd.com>"]
description = "Kiibohd gpio keyscanning module for momentary push button switches (keyboards)"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "usb", "hid", "embedded", "keyboard"]
categories = ["embedded", "no-std", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt           = "0.3"
embedded-hal    = { version = "0.2.7", features = ["unproven"] }
heapless        = "^0.7.10"
kll-core        = { version = "0.1.0", path = "../kll-core", optional = true }

[features]

default = []

# Used to convert KeyState to TriggerEvent
kll-core = ["dep:kll-core"]
