[package]
name = "kiibohd-usb"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
description = "Kiibohd USB HID Interface"
keywords = ["usb", "hid", "embedded", "nkro"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-core"

[dependencies]
defmt = "0.3"
heapless = { version = "^0.7.10", features = ["defmt-impl"] }
kiibohd-hid-io = { version = "0.1.0", path = "../kiibohd-hid-io", optional = true }
kll-core = { version = "0.1.0", path = "../kll-core", optional = true }
usb-device = { version = "0.2.9", git = "https://github.com/haata/usb-device.git", features = ["defmt-impl"] }
usbd-hid = { version = "0.5.3", git = "https://github.com/haata/usbd-hid.git", features = ["defmt-impl"] }

[dev-dependencies]
libc-print = "0.1.16"


[features]
default = ["hidio", "mouse"]

# HID-IO Support can be disabled
hidio = ["kiibohd-hid-io"]

# Mouse Support can be disabled
mouse = []

# Defmt logging disabled by default
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# kll-core Capability Event enqueuing support
kll-core = ["dep:kll-core"]
