[package]
name = "kll"
version = "0.1.0"
authors = ["Smasher816 <Smasher816@gmail.com>"]
edition = "2018"

[dependencies]
pest = { version = "2.1", features = ["pretty-print" ] }
pest_derive = "2.1"
pest_consume = "1.0"
object-merge = "0.1.0-alpha1"
derive-object-merge = "0.1.0-alpha1"
structopt = "0.3"
enum-utils = "0.1.2"
alphanumeric-sort = "1.4.1"
layouts = { path = "../layouts-rs" }
