[package]
name = "kll-compiler"
version = "0.1.0"
authors = ["Smasher816 <Smasher816@gmail.com>", "Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "KLL (Keyboard Layout Language) Compiler - Rust Edition"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "usb", "hid", "embedded", "keyboard"]
categories = ["embedded", "no-std"]

[dependencies]
alphanumeric-sort   = "1.4"
derive-object-merge = "0.1.0-alpha1"
enum-utils          = "0.1"
kll-core            = { version = "0.1.0", path = "../kll-core" }
layouts-rs          = "0.1.0"
log                 = { version = "^0.4" }
object-merge        = "0.1.0-alpha1"
pest                = { version = "2.1", features = ["pretty-print"] }
pest_consume        = "1.1"
pest_derive         = "2.1"
structopt           = "0.3"


[dev-dependencies]
flexi_logger    = "^0.16"
