[package]
name = "kll-core"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "KLL state-machine implementation focused on no_std embedded/bare-metal targets"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "embedded", "keyboard"]
categories = ["embedded", "no-std"]

[features]
default = ["std"]

std = ["log"]

# Defmt logging disabled by default
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
byteorder             = { version = "1.3", default-features = false }
defmt                 = "0.3"
embedded-time         = "0.12"
enum-primitive-derive = "0.2.2"
heapless              = "^0.7.10"
kll-hid               = { version = "0.1.0", path = "../kll-hid" }
kll-macros            = { version = "0.1.0", path = "../kll-macros" }
log                   = { version = "^0.4", default-features = false, optional = true }
num-traits            = { version = "0.2", default-features = false }
static_assertions     = "1.1"
transmute             = "0.1"

[dev-dependencies]
flexi_logger  = "^0.16"
