[package]
name = "kll-hid"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
description = "USB HID enum mapping for kll-core"
repository = "https://github.com/kiibohd/kiibohd-core"
keywords = ["no-std", "usb", "hid", "embedded"]
categories = ["embedded", "no-std"]

[dependencies]
defmt = "0.3"

[dev-dependencies]
