[package]
name = "kll-macros"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Rust macros for kll-core"
repository = "https://github.com/kiibohd/kiibohd-core"

[lib]
proc-macro = true

[dev-dependencies]
kll-core = { path = "../kll-core" }
kll-hid = { path = "../kll-hid" }
